[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
tungstenite = "0.26.2"
url = "2.5.4"
bincode = "1.3.3"
